# cpu-micro-benchmarks

./: .gitignore  ANDROID-PERF.md  BUILD  LICENSE  Makefile  NOTES.md  README.md  aarch64-linux-cross.txt  android-cross.txt  default.nix  ios-cross.txt  meson.build  meson_options.txt  plot_bp_size.py  plot_btb.py  plot_btb_size.py  plot_memory_latency.py  plot_ras_size.py  plot_rob_size.py  pyproject.toml
agner/: .gitignore  NOTES.md
agner/testp/DriverSrcLinux/: Makefile
agner/testp/PMCTest/: PMCTestB64.nasm
agner/testp/TestScripts/: 32bitinstr.sh1  AVX_states.inc  AVX_states.sh2  MSRdrvL.h  MyTemplateB64.nasm  PMCTest.h  PMCTestA.cpp  PMCTestB32.nasm  PMCTestLinux.h  TemplateB32.nasm  a32.sh  a64.sh  allsh1.sh  amd.sh1  avx2.sh1  branch.inc  branch.sh2  cache_banks.sh2  cache_latency.sh2  cache_throughput.sh2  convers.sh1  convers2.sh1  cpugetinfo.cpp  daxpy.sh2  decode_double.inc  decode_double.sh2  decode_nops.inc  decode_nops.sh2  decode_prefix.inc  decode_prefix.sh2  decoder_throughput.inc  decoder_throughput.sh2  div.sh1  evex.inc  exec_domain.sh2  fma.sh1  fused_branch.inc  fused_branch.sh2  fvec.sh1  gather.sh1  (+69 more)
benchmarks/mixed-sign-dotprod/: .gitignore  Makefile  README.md  benchmark.c  transform_c.c  transform_clang22.S  transform_gcc15.S  transform_gcc16.S  transform_opt.S
benchmarks/vfmax/: Makefile  README.md  benchmark.c  vfmax_c.c  vfmax_clang22.S  vfmax_gcc15.S  vfmax_gcc16.S  vfmax_opt.S
figures/: plot_bp_size.py  plot_btb_size.py  plot_dtlb_size.py  plot_memory_latency.py  plot_phr_branch_bits_location.py  plot_phr_size.py  plot_phr_target_bits_location.py  plot_pht_associativity.py  plot_pht_index_bits_xor.py  plot_pht_index_bits_xor_phr.py  plot_pht_tag_bits_xor.py  plot_pht_tag_bits_xor_phr.py  plot_rob_size.py
include/: counters.h  counters_mapping.h  instrs.h  jit.h  uarch.h  utils.h
reports/dissecting_cbp_of_apple_firestorm_and_qualcomm_oryon/: README.md
results/: .gitignore
results/instruction_latency/: huawei_kunpeng920.csv  intel_broadwell.csv  loongson_3a6000.csv  loongson_3c5000.csv
results/rob_size/: README.md
src/: bp_size.cpp  bp_size_gen.cpp  btb.cpp  btb_size.cpp  btb_size_basic.cpp  btb_size_basic_gen.cpp  btb_size_basic_lib.cpp  coherency_latency.cpp  detect_uarch.cpp  div.cpp  dtlb_size.cpp  elimination.cpp  elimination_gen.cpp  elimination_lib.cpp  fetch_bandwidth.cpp  fetch_bandwidth_gen.cpp  fetch_bandwidth_lib.cpp  find_branch_misses_pmu.cpp  find_branch_misses_pmu_gen.cpp  fp_peak.cpp  fp_peak_gen.cpp  gather.cpp  gather_aarch64.cpp  gather_serialize.cpp  generate_gadget.cpp  ghr2_size.cpp  ghr_size.cpp  ghr_size_gen.cpp  ghr_size_lib.cpp  if_width.cpp  if_width_gen.cpp  if_width_lib.cpp  instruction_latency.cpp  instruction_latency_lib.cpp  instruction_latency_perf.cpp  ipc.cpp  itlb_size.cpp  itlb_size_gen.cpp  itlb_size_lib.cpp  memory_latency.cpp  (+36 more)
