option('ios', type : 'boolean', value : false)
option('android', type : 'boolean', value : false)
option('gem5', type : 'boolean', value : false)
option('linux-cross', type : 'combo', choices: ['none', 'aarch64'], value : 'none')
option('apple_m1', type : 'combo', choices : ['icestorm', 'firestorm'], value : 'firestorm')