[tool.poetry]
name = "cpu-micro-benchmarks"
version = "0.1.0"
description = ""
authors = ["Jiajie Chen <c@jia.je>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.10.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
